--- a/src/components/tabs/styles.css
+++ b/src/components/tabs/styles.css
@@ -21,8 +21,8 @@ ul.lang {
 }
 
 ul.nav {
+  height: 100%;
   width: 100%;
-  margin: 0 auto 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -32,6 +32,7 @@ ul.nav {
     width: 90%;
   }
 }
+
 ul.nav li {
   width: 50%;
   padding: 1rem;
@@ -40,12 +41,15 @@ ul.nav li {
   cursor: pointer;
   transition: all 0.7s;
 }
+
 ul.nav li:nth-child(2) {
   border-radius: 0;
 }
+
 ul.nav li:hover {
   background: #C4C4C4
 }
+
 ul.nav li.active {
   background: #858585;
 }
