add japanese translations add additional render to art section use icons from react-icons add links to open-source project contributions

--- a/src/components/language/styles.css
+++ b/src/components/language/styles.css
@@ -1,5 +1,4 @@
 .LanguageToggle {
-  padding: 1rem;
 }
 
 button {
@@ -9,6 +8,12 @@ button {
   height: 100%;
   display: flex;
   align-items: center;
+  padding: 1rem;
+  transition: all 0.7s;
+}
+
+button:hover {
+  background: #C4C4C4
 }
 
 ul.inactive {
