--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
    box-sizing: border-box;
    padding: 0;
    margin: 0;
+   font-family: "Regular";
+}
+
+@font-face {
+  font-family: "Regular";
+  src: local("NotoSansJPRegular"),
+    url("./assets/fonts/NotoSansJP-Regular.otf") format("opentype");
 }
 
 .App {
