--- a/src/components/pages/styles.css
+++ b/src/components/pages/styles.css
@@ -1,22 +1,54 @@
 .Page {
   height: 100vh%;
   width: 100vh%;
-  font-size: 1rem;
   text-align: center;
+  transition: all 0.75s;
+  padding: 5rem 1rem 5rem 1rem;
+}
+
+.content {
   transition: all 0.75s;
 }
 
-.Page.preEnter,
-.Page.exiting {
+.content.preEnter,
+.content.exiting {
   opacity: 0;
   transform: scale(0.5);
 }
-.Page.exited {
+
+.content-enter {
+  opacity: 0;
+}
+
+.content-enter-active {
+  opacity: 1;
+  transition: opacity 2000ms;
+}
+
+.content-exit {
+  opacity: 1;
+}
+
+.content-exit-active {
+  opacity: 0;
+  transition: opacity 2000ms;
+}
+
+.content.exited {
   display: none;
+}
+
+h1 {
+  padding: 0 0 .15rem 0;
+}
+
+h2 {
+  padding: 0 0 .5rem 0;
 }
 
 img {
   width: 100%;
+  padding: 0 .15rem;
 }
 
 .ModelViewer {
@@ -40,27 +72,39 @@ video {
 }
 
 .blender {
-  max-width: 25%;
+  max-width: 7rem;
+  margin: 0 .5rem;
 }
 
-.VerticalTimeline {
-  padding: 0 0 5rem 0;
-}
-
-.vertical-timeline-element {
+.vertical-timeline-element--work {
   min-height: 50%;
 }
 
-.icon {
-  width: 75%;
+.vertical-timeline-element-date {
+  color: #ffffff;
+}
+
+.vertical-timeline-element-title {
+  text-align: left;
+  color: #ffffff;
+  padding: 1rem 0;
+}
+
+.vertical-timeline-element-subtitle {
+  text-align: left;
+  color: #ffffff;
+  padding: 1rem 0;
+}
+
+.row {
+  display: flex;
   text-align: center;
 }
 
-.Button {
-  background: #000000;
-  background-color: #000000;
-  color: #000000;
-  min-height: 5rem;
-  font-size: 1rem;
-  text-decoration: none;
+.row_blender {
+  width: 100%;
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
 }
