--- a/src/components/pages/styles.css
+++ b/src/components/pages/styles.css
@@ -34,6 +34,12 @@ img {
   width: 100vh%;
 }
 
+.game {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1024px;
+}
+
 video {
   width: 100%;
   flex-shrink: 1;
